feat: se agregra todo el proceso para vehiculos y patios
